# cross-systems-template

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  docker-compose.yml  pyproject.toml
.codex/: project-context.md
.devcontainer/: devcontainer.json
docs/: README.md
image/: Dockerfile  docker-entrypoint.sh
profiles/: linux-gcc-ninja-cuda-debug  linux-gcc-ninja-cuda-release  linux-gcc-ninja-debug  linux-gcc-ninja-release  windows-msvc-msbuild-cuda  windows-msvc-ninja-cuda-debug  windows-msvc-ninja-cuda-release  windows-msvc-ninja-debug  windows-msvc-ninja-release
scripts/: install-conan-windows-msvc-msbuild-cuda.ps1  install-conan-windows-msvc-msbuild.ps1  startup-windows.ps1
src/cpp/: main.cpp
tests/: check_pycuda.py
tests/cpp/: check_cuda.cu
tests/python/: test_pycuda.py
